Add system log.

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 画像の読み込み - DONE
 アニメーションの実装 - DONE
+ゲームカメラの対応  - DONE
+マップ生成システム - DONE
 
-ゲームカメラの対応  - NONE
-ログ処理の実装 - NONE
+ログ処理の実装 - WIP
+タイルのあたり判定 - NONE
